--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,16 @@ version: '3.8'
 services:
   api:
     build: .
+    container_name: leaderboard-api-api
     ports:
       - "5000:5000"
-    working_dir: /app
-    volumes:
-      - .:/app
     env_file:
       - .env
     depends_on:
       - mongo
-    environment:
-      - FLASK_APP=app
-      - FLASK_RUN_HOST=0.0.0.0
-    command: flask run --host=0.0.0.0 --port=5000
+    volumes:
+      - .:/app
+    command: flask run --host=0.0.0.0
   mongo:
     image: mongo:4.2
     ports:
