--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     container_name: leaderboard_test
     environment:
       - FLASK_ENV=testing
+      - PYTHONPATH=/app
     command: python -m unittest discover tests
     depends_on:
       - mongo
